Add logic when paddle hit ball while moving

--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 canvas {
   border: 1px solid black;
 }
+
 .hidden {
   display: none;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
