--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 button {
@@ -29,6 +31,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
 }
 
 .stats {
@@ -40,4 +43,41 @@ body {
   font-size: 1.1rem;
   color: brown;
   font-weight: 700;
+}
+
+#modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+
+#modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 300px;
+  width: 40%;
+  text-align: center;
+  padding-top: 120px;
+  background-color: #f3f3f3;
+  border: 1px solid #888;
+  font-size: 4rem;
+  color: red;
+}
+
+#close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(100%, -50%);
+  cursor: pointer;
+  color: black;
+  font-weight: 400;
 }
